deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: spring-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      name: spring
  template:
    metadata:
      name: spring-pod
      labels:
        name: spring
    spec:
      containers:
      - name: spring-container
        image: netdevopsaslan/test_api
