service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-service

spec:
  type: NodePort
  ports:
    - targetPort: 8080            #POD's port
      port: 8080           # service's port
      nodePort: 30008       #node's port ( range 30000-32767)
  selector:
    name: spring         #label of POD's, i take it from deployment file , NodeServicePort redirect request to only these PODs which have this labels name:spring
