networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  PodSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress
  egress:
  - to:   
      - podSelector:
          matchLabels:
            name: payroll
    port:
      - protocol: TCP
        port: 8080
        
  - to: 
      - podSelector:
          matchLabels:
            name: mysql
    port:
      - protocol: TCP
        port: 3306
~
